{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 101,
  "lineage": "adc6a32d-1d3b-fe4f-8980-3e2a6784ef68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019f4fd93826503e0",
            "association_id": "eipassoc-0f40eec1f7b5a8e84",
            "domain": "vpc",
            "id": "eipalloc-019f4fd93826503e0",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0478672b4989945c8",
            "private_dns": "ip-10-0-10-170.ap-northeast-1.compute.internal",
            "private_ip": "10.0.10.170",
            "public_dns": "ec2-18-178-106-238.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.106.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "skill-check-natgw-1a"
            },
            "tags_all": {
              "Name": "skill-check-natgw-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "skill_check_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:957964833658:loadbalancer/skill-check-elb",
            "availability_zones": [
              "ap-northeast-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "skill-check-elb-726000616.ap-northeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "skill-check-elb",
            "idle_timeout": 400,
            "instances": [
              "i-035fdebd7cb256928",
              "i-0365c719e9bc5aa84",
              "i-09abf092003a46212",
              "i-0a0936ba5682379dd"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "skill-check-elb",
            "security_groups": [
              "sg-06f1de8ba21b2fceb",
              "sg-0ddedb10f5d653fdc"
            ],
            "source_security_group": "957964833658/http",
            "source_security_group_id": "sg-0ddedb10f5d653fdc",
            "subnets": [
              "subnet-0704d1335c7fcb187"
            ],
            "tags": {
              "Environment": "Development",
              "Name": "skill-check-elb",
              "Role": "ELB"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "skill-check-elb",
              "Role": "ELB"
            },
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.http",
            "aws_security_group.internal",
            "aws_subnet.public_1a",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ee4e2261a4dc5c3",
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:instance/i-07066d1184a13acb5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07066d1184a13acb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-068259e03fb399b2b",
            "private_dns": "ip-172-31-0-120.ap-northeast-1.compute.internal",
            "private_ip": "172.31.0.120",
            "public_dns": "ec2-35-77-45-209.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.77.45.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a5d04e322f571aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a4c94b651e68dd4",
            "tags": {
              "Name": "skill-check"
            },
            "tags_all": {
              "Name": "skill-check"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0193d69d41ba3d5d8"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:internet-gateway/igw-0c7513ec8e55de805",
            "id": "igw-0c7513ec8e55de805",
            "owner_id": "957964833658",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019f4fd93826503e0",
            "connectivity_type": "public",
            "id": "nat-0417ebffe2fae64c4",
            "network_interface_id": "eni-0478672b4989945c8",
            "private_ip": "10.0.10.170",
            "public_ip": "18.178.106.238",
            "subnet_id": "subnet-0704d1335c7fcb187",
            "tags": {
              "Name": "skill-check-1a"
            },
            "tags_all": {
              "Name": "skill-check-1a"
            }
          },
          "dependencies": [
            "aws_eip.nat_1a",
            "aws_subnet.public_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:route-table/rtb-0cd1b8c3154ed4c5b",
            "id": "rtb-0cd1b8c3154ed4c5b",
            "owner_id": "957964833658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0417ebffe2fae64c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat-rt"
            },
            "tags_all": {
              "Name": "nat-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:route-table/rtb-0665b0a685a2ec150",
            "id": "rtb-0665b0a685a2ec150",
            "owner_id": "957964833658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7513ec8e55de805",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063036023c8dda0a9",
            "route_table_id": "rtb-0cd1b8c3154ed4c5b",
            "subnet_id": "subnet-08409e99e5e8f93e5"
          },
          "dependencies": [
            "aws_eip.nat_1a",
            "aws_nat_gateway.nat_1a",
            "aws_route_table.nat_rt",
            "aws_subnet.private_1a",
            "aws_subnet.public_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066bc5ef34d1b0829",
            "route_table_id": "rtb-0665b0a685a2ec150",
            "subnet_id": "subnet-0704d1335c7fcb187"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:security-group/sg-0ddedb10f5d653fdc",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddedb10f5d653fdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "957964833658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http"
            },
            "tags_all": {
              "Name": "http"
            },
            "timeouts": null,
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:security-group/sg-06f1de8ba21b2fceb",
            "description": "Allow internal traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f1de8ba21b2fceb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "internal",
            "name_prefix": "",
            "owner_id": "957964833658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internal"
            },
            "tags_all": {
              "Name": "internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:security-group/sg-0378af2abf75c064b",
            "description": "Allow internal inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0378af2abf75c064b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nat",
            "name_prefix": "",
            "owner_id": "957964833658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:security-group/sg-0b0447925f809399c",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0447925f809399c",
            "ingress": [
              {
                "cidr_blocks": [
                  "122.212.216.66/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "957964833658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:subnet/subnet-08409e99e5e8f93e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08409e99e5e8f93e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957964833658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1a"
            },
            "tags_all": {
              "Name": "private-1a"
            },
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:subnet/subnet-0704d1335c7fcb187",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0704d1335c7fcb187",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957964833658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1a"
            },
            "tags_all": {
              "Name": "public-1a"
            },
            "vpc_id": "vpc-073627cd72daf1965"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:957964833658:vpc/vpc-073627cd72daf1965",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f6cd624316395b1",
            "default_route_table_id": "rtb-08fa497f316647e9d",
            "default_security_group_id": "sg-01f03f009868f28e7",
            "dhcp_options_id": "dopt-0cbe75c5a4cec7def",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-073627cd72daf1965",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fa497f316647e9d",
            "owner_id": "957964833658",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}